--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
+title: Portal Fisika As-Syifa
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://gigihpamungkas.github.io/semuatentangfisika
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
