--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,13 @@ url: https://gigihpamungkas.github.io/semuatentangfisika
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
-# Enable or disable MathJax
-math: mathjax
-mathjax:
-  load: [tex-mml-chtml]
-  tex:
-    inlineMath: [['$', '$'], ['\\(', '\\)']]
-    displayMath: [['$$', '$$'], ['\\[', '\\]']]
+# Di dalam file _config.yml
+markdown: kramdown
+kramdown:
+  math_engine: mathjax
 
+# Tambahkan ini di bagian paling bawah
+aux_links:
+  "MathJax Script":
+    - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
     
