--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,5 @@ aux_links:
   "MathJax Script":
     - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
     
+    # Di dalam file _config.yml
+footer_content: "© 2026 Semua Tentang Fisika | Portal Pendidikan Assyifa Boarding School"
