--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: just-the-docs
 url: https://gigihpamungkas.github.io/semuatentangfisika
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Template Repository: 
 
 # Di dalam file _config.yml
 markdown: kramdown
@@ -18,4 +18,4 @@ aux_links:
     - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
     
     # Di dalam file _config.yml
-footer_content: "© 2026 Semua Tentang Fisika | Portal Pendidikan Assyifa Boarding School"
+footer_content: "© 2026 Semua Tentang Fisika | Portal Fisika Assyifa Boarding School"
