--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: just-the-docs
 url: https://gigihpamungkas.github.io/semuatentangfisika
 
 aux_links:
-  Template Repository: 
+  Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
 # Di dalam file _config.yml
 markdown: kramdown
